--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img src="Assets/Savoye_Plan.png" alt="First floor plan of Villa Savoye" width="562" height="400">
             </div>
             <p>The support system carries the intermediate ceilings and rises up to the roof. The interior walls may be placed wherever required, each floor being entirely independent of the rest. There are no longer any supporting walls but only membranes of any thickness required. The result of this is absolute freedom in designing the ground-plan; that is to say, free utilization of the available means, which makes it easy to offset the rather high cost of reinforced concrete construction.</p>
-            <p>Excerpts from Le Corbusier's Vers Une Architecture</p>
+            <p>Excerpts from Le Corbusier's Vers Une Architecture. <br> Diagrams in reference to Villa Savoye.</p>
         </div>
 
     </body>
